--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,15 @@
   align-items: center;
   justify-content: center;
 }
+
+.Keyboard-key--correct {
+  background-color: #538d4e;
+}
+
+.Keyboard-key--almost {
+  background-color: #b59f3b;
+}
+
+.Keyboard-key--nope {
+  background-color: #3a3a3c;
+}
